--- a/style.css
+++ b/style.css
@@ -207,79 +207,31 @@ p {
 /* End Header section */
 
 /* Hero Section */
-#hero {
+.intro {
 	position: relative;
-	z-index: 1;
+	background-color: #52057b;
 }
-.right{
-	height: 170px;
-	width: 170px;
+
+.introo {
 	position: relative;
-	left: 600px;
-	top: -440px;
-}
-#hero::after {
-	content: '';
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
+	/* background-color: #52057b; */
 	background-image: linear-gradient(60deg, #0f1d2a 0%, #282c30 100%);
 	opacity: 1;
-	z-index: -1;
-	
+	height: 500px;
+	text-align: center;
+	color: #fff !important;
+	padding-top: 7em;
 }
-#hero .hero {
-	max-width: 1200px;
-	margin: 0 auto;
-	padding: 0 50px;
-	justify-content: flex-start;
-	position: relative;
-	left: 160px;
-}
-#hero h1 {
-	display: block;
-	width: fit-content;
-	font-size: 2rem;
-	position: relative;
-	color: transparent;
-	animation: text_reveal 0.5s ease forwards;
-	animation-delay: 1s;
-}
-#hero h1:nth-child(1) {
-	animation-delay: 1s;
-	font-size: 4rem;
 
-}
-#hero h1:nth-child(2) {
-	animation-delay: 2s;
+.introo a {
+	text-decoration: none;
+	cursor: default;
+	position: relative;
+	top: 80px;
 	font-size: 4rem;
 }
-#hero h1:nth-child(3) {
-	animation: text_reveal_name 0.5s ease forwards;
-	animation-delay: 3s;
-	font-size: 4rem;
-}
-#hero h1 span {
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 0;
-	background-color: rgb(30, 21, 23);
-	background-image: linear-gradient(60deg, #34383c 0%, #485563 100%);
-	animation: text_reveal_box 1s ease;
-	animation-delay: 0.5s;
-}
-#hero h1:nth-child(1) span {
-	animation-delay: 0.5s;
-}
-#hero h1:nth-child(2) span {
-	animation-delay: 1.5s;
-}
-#hero h1:nth-child(3) span {
-	animation-delay: 2.5s;
+.typewrite>.wrap {
+  	border-right: 0.08em solid #fff;
 }
 
 /* End Hero Section */
@@ -399,14 +351,20 @@ p {
 }
 #about .col-left {
 	width: 250px;
-	height: 360px;
+	height: 210px;
 }
 #about .col-right {
 	width: 100%;
+	text-align: justify;
+	padding-left: 15px;
+	padding-top: 15px;
+}
+.col-right .section-title{
+	margin-top: -40px;
 }
 #about .col-right h2 {
 	font-size: 2rem;
-	font-weight: 500;
+	font-weight: bold;
 	letter-spacing: 0.2rem;
 }
 #about .col-right p {
@@ -421,15 +379,17 @@ p {
 /* End About Section */
 
 /* contact Section */
+#contact{
+	margin-top: -300px;
+}
 #contact .contact {
 	flex-direction: column;
 	max-width: 1200px;
 	width: 90%;
-	margin-top: -150px;
 }
 #contact .contact-items {
 	width: 100%;
-	
+	margin-top: -50px;
 }
 #contact .contact-item {
 	width: 80%;
@@ -544,11 +504,7 @@ p {
 	h1.section-title {
 		font-size: 6rem;
 	}
-	/* Hero */
-	#hero h1 {
-		font-size: 7rem;
-	}
-	/* End Hero */
+
 
 	/* Services Section */
 	#services .service-bottom .service-item {
