--- a/style.css
+++ b/style.css
@@ -86,7 +86,6 @@ p {
 }
 #header .header {
 	min-height: 8vh;
-	/* background-color:rgba(50, 46, 46, 1); */
 	background-image: linear-gradient(60deg, #0e1821 0%, #1d2e40 100%);
 	transition: 0.3s ease background-color;
 	max-width: 100%;
@@ -103,7 +102,6 @@ p {
 #header .nav-list ul {
 	list-style: none;
 	position: absolute;
-	/* background-color: rgb(31, 30, 30); */
 	width: 100vw;
 	height: 100vh;
 	left: 100%;
@@ -312,7 +310,6 @@ p {
 {
     height: 400px;
     width: 680px;
-	
     position: relative;
     transition: 1.1s all;
     box-shadow: 6px 6px 40px 10px rgba(56, 39, 39, 0.9);
@@ -346,12 +343,11 @@ p {
 	flex-direction:row;
 	text-align: center;
 	max-width: 1200px;
-	margin: 0 auto;
-	padding: 100px 20px;
+	padding: 90px 20px;
+	margin-bottom: 0;
 }
 #about .col-left {
 	width: 250px;
-	height: 210px;
 }
 #about .col-right {
 	width: 100%;
@@ -368,7 +364,7 @@ p {
 	letter-spacing: 0.2rem;
 }
 #about .col-right p {
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 #about .col-right .cta {
 	color: black;
@@ -379,17 +375,14 @@ p {
 /* End About Section */
 
 /* contact Section */
-#contact{
-	margin-top: -300px;
-}
 #contact .contact {
 	flex-direction: column;
 	max-width: 1200px;
 	width: 90%;
+	margin-top: -240px;
 }
 #contact .contact-items {
 	width: 100%;
-	margin-top: -50px;
 }
 #contact .contact-item {
 	width: 80%;
@@ -542,7 +535,7 @@ p {
 	/* contact  */
 	#contact .contact {
 		flex-direction: column;
-		padding: 100px 0;
+		padding: 50px 0;
 		align-items: center;
 		justify-content: center;
 		min-width: 20vh;
